--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@
       <div class="container">
         <div class="nav-link">
           <a href="./index.html">HOME</a>
-          <a href="">CLOTHES</a>
+          <a href="./pages/clothes.html">CLOTHES</a>
           <a href="">HOME & FURNITUE</a>
           <a href="">BEAUTY AND WELLNESS</a>
           <a href="">GARDEN AND OUTDOORS</a>
@@ -77,6 +77,7 @@
         <img src="./images/denim & pants.jpeg" alt="">
         <img src="./images/maeve.jpeg" alt="">
         <img src="./images/candle crushes.jpeg" alt="">
+        
       </div>
 
       <div class="banner1">
@@ -135,6 +136,32 @@
             <p> Endless Rose Mini Sweater Dress</p>
           </div>
         </div>
+        <hr>
+      </div>
+      <div class="about">
+        <p>About Us</p>
+        <h4>Our mission at Utopia has always been to surprise and delight you with unexpected, distinctive finds for your closet and home. We source and craft all of our products with care, ensuring that any treasure you find at utopia is unique, just like you. Explore our dresses shop to find styles and fits perfect for any occasion, from cocktail party dresses to wedding guest dresses to casual daytime silhouettes. Shop BHLDN and take a look at our selection of wedding dresses. Browse party skirts, wide-leg pants and jeans, and blouses that will turn heads. Complete your look with uncommon accessories—think only-here slides and head-turning totes. Discover our expansive home collections, from furniture to curtains, decorative pillows to duvets, wall art to Moroccan-inspired rugs. Looking for a housewarming gift? Try a coffee table book, original glassware or a set of coasters.</h4>
+      </div>
+    </div>
+
+    <div class="footer">
+      <div class="container">
+        <div class="footer-top">
+          <div class="footer-content">
+            <h3>Signup For Email</h3>
+            <p>Receive early access to new arrivals, sales, exclusive content, events and much more!</p>
+          </div>
+          <div class="footer-input-box">
+            <form>
+              <label for="email">Email Address* </label>
+            <input type="text" id="email-box">
+            <button id="submit">Submit</button>
+            </form>
+          </div>
+        </div>
+       
+        <p>By signing up, you will receive Utopia offers, promotions and other commercial messages. You are also agreeing to utopia’s Privacy Policy. You may unsubscribe at any time.</p>
+        <p>2022 URBN.com. All Rights Reserved.</p>
       </div>
     </div>
   </body>
