--- a/index.html
+++ b/index.html
@@ -62,9 +62,9 @@
         <div class="nav-link">
           <a href="./index.html">HOME</a>
           <a href="./pages/clothes.html">CLOTHES</a>
-          <a href="">HOME & FURNITUE</a>
-          <a href="">BEAUTY AND WELLNESS</a>
+          <a href="./pages/beauty.html">BEAUTY AND WELLNESS</a>
           <a href="">GARDEN AND OUTDOORS</a>
+          <a href="">HOME & FURNITUE</a>
           <a href="" style="color:red">GIFTS</a>
           <a href="">SALE</a>
         </div>
@@ -87,15 +87,15 @@
       <div class="page-cards">
         <div class="card">
           <img src="./images/home-cloth-card.jpg" alt="" >
-          <button>Clothes</button>
+          <a href="./pages/clothes.html">Clothes</a>
         </div>
         <div class="card">
           <img src="./images/home-assesorier-card.jpg" alt="">
-          <button>Home Assesories</button>
+          <a href="./pages/beauty.html">Beauty & Wellness</a>
         </div>
         <div class="card">
           <img src="./images/home-furniture-card.jpg" alt="">
-          <button>Furnitures</button>
+          <a href="#">Furnitures</a>
         </div>
       </div>
 
